Fix horizontal scroll

--- a/sass/_styles.scss
+++ b/sass/_styles.scss
@@ -15,6 +15,7 @@ body {
   color: #FFFCE1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 body {
@@ -105,7 +106,7 @@ button {
 
 .canvas-bg {
   position: fixed;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: block;
   top: 0;
@@ -129,7 +130,7 @@ button {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   contain: strict;
   pointer-events: none;
